--- a/references.bib
+++ b/references.bib
@@ -400,8 +400,8 @@
 }
 
 @article{eaton2021naomi,
-  title={Naomi: A New Modelling Tool for Estimating HIV Epidemic Indicators at the District Level in Sub-Saharan Africa },
-  author={Eaton, Jeffrey W and Dwyer-Lindgren, Laura and Gutreuter, Steve and O’Driscoll, Megan and Stevens, Oliver and Bajaj, Sumali and Ashton, Rob and Hill, Alex and Russell, Emma and Esra, Rachel and Dolan, Nicolas and Anifowoshe, Yusuf L and Fellows, Ian and Glaubius, Rob and Haeuser, Emily and Okonek, Taylor and Stover, John and Thomas, Matthew L and Wakefield, Jon and Wolock, Tim and Berry11, Jonathan and Sabala, Tomasz and Heard, Nate and Delgado, Stephen and Pantazis, Athena and Jahn, Andreas and Kalua, Thoko and Chimpandule, Tiwonge and Auld, Andrew and Kim, Evelyn and Payne, Danielle and Johnson, Leigh F and Fitzjohn, Rich and Wankyeki, Ian and Mahy, Mary and Shiraishi, Ray},
+  title={Naomi: A New Modelling Tool for Estimating HIV Epidemic Indicators at the District Level in Sub-Saharan Africa},
+  author={Eaton, Jeffrey W and Dwyer-Lindgren, Laura and Gutreuter, Steve and O’Driscoll, Megan and Stevens, Oliver and Bajaj, Sumali and Ashton, Rob and Hill, Alex and Russell, Emma and Esra, Rachel and Dolan, Nicolas and Anifowoshe, Yusuf L and Fellows, Ian and Glaubius, Rob and Haeuser, Emily and Okonek, Taylor and Stover, John and Thomas, Matthew L and Wakefield, Jon and Wolock, Tim and Berry, Jonathan and Sabala, Tomasz and Heard, Nate and Delgado, Stephen and Pantazis, Athena and Jahn, Andreas and Kalua, Thoko and Chimpandule, Tiwonge and Auld, Andrew and Kim, Evelyn and Payne, Danielle and Johnson, Leigh F and Fitzjohn, Rich and Wankyeki, Ian and Mahy, Mary and Shiraishi, Ray},
   year={2021}
 }
 
@@ -1939,10 +1939,27 @@ doi = {10.1201/9781420072884-c30}
   doi = {10.5281/zenodo.1211190},
 }
 
- @Manual{cranlogs,
-    title = {cranlogs: Download Logs from the 'RStudio' 'CRAN' Mirror},
-    author = {Gábor Csárdi},
-    year = {2023},
-    note = {https://github.com/r-hub/cranlogs,
-https://r-hub.github.io/cranlogs},
-  }
+@Manual{cranlogs,
+  title = {cranlogs: Download Logs from the 'RStudio' 'CRAN' Mirror},
+  author = {Gábor Csárdi},
+  year = {2023},
+  note = {https://github.com/r-hub/cranlogs, https://r-hub.github.io/cranlogs},
+}
+
+@article{esra2023improved,
+  title={Improved indicators for subnational unmet antiretroviral therapy need in the health system: updates to the Naomi model in 2023},
+  author={Esra, Rachel},
+  year={2023}
+}
+
+@article{stover2019updates,
+  title={Updates to the Spectrum/AIM model for estimating key HIV indicators at national and subnational levels},
+  author={Stover, John and Glaubius, Robert and Mofenson, Lynne and Dugdale, Caitlin M and Davies, Mary-Ann and Patten, Gabriela and Yiannoutsos, Constantin},
+  journal={AIDS (London, England)},
+  volume={33},
+  number={Suppl 3},
+  pages={S227},
+  year={2019},
+  publisher={Wolters Kluwer Health}
+}
+
